fix: mobile vh unit broken on safari

--- a/src/assets/styles/sections/cart.scss
+++ b/src/assets/styles/sections/cart.scss
@@ -4,6 +4,7 @@
   top: 0;
   z-index: 20;
   height: 100vh;
+  height: calc(var(--vh, 1vh) * 100);
   transform: translateX(100%) translateZ(0);
   transition: transform 250ms cubic-bezier(.5,0,.5,1);
   background: #F5F5F5;
@@ -96,6 +97,8 @@
   display: flex;
   flex-direction: column;
   padding-top: 30px;
+  min-height: 20vh;
+  min-height: calc(var(--vh, 1vh) * 20);
   .cart-subtotal {
     display: flex;
     justify-content: space-between;
